# dwd

./: .clang-format  .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.ubuntu18  README.md  deny.toml
.claude/: settings.json
.claude/agents/: dpdk-specialist.md  performance-engineer.md  property-test-author.md
.claude/hooks/: no-ai-attribution.py
.claude/skills/ship-pr/: SKILL.md
.github/workflows/: ci.yml  dpdk.yml  release.yml  rust.yml
dpdk/: Cargo.toml  build.rs
dpdk/src/: boxed.rs  cpu.rs  eal.rs  error.rs  ethdev.rs  lcore.rs  lib.rs
dpdk/src/ffi/: stub.c  wrapper.h
dwd/: Cargo.toml
dwd-core/: Cargo.toml
dwd-core/benches/: generator.rs  histogram.rs  shaper.rs
dwd-core/src/: cfg.rs  engine.rs  generator.rs  histogram.rs  lib.rs  stat.rs
dwd-core/src/api/: metrics.rs
dwd-core/src/engine/: coro.rs  runtime.rs
dwd-core/src/engine/http/: engine.rs  engine_raw.rs  io.rs
dwd-core/src/engine/http/payload/: jsonline.rs
dwd-core/src/engine/udp/: engine.rs
dwd-core/src/grpc/: mod.rs  server.rs  snapshot.rs
dwd-core/src/worker/: dpdk.rs
dwd-proto/: Cargo.toml  build.rs
dwd-proto/dwdpb/: dwd.proto
dwd-proto/src/: lib.rs
dwd/etc/dwd/: generator-example.yaml  http-payload.jsonl
dwd/src/: cfg.rs  cmd.rs  engine.rs  generator.rs  histogram.rs  lib.rs  logging.rs  main.rs  runtime.rs  shaper.rs  sockbind.rs  sockstat.rs  stat.rs  ui.rs  worker.rs
dwd/src/api/: mod.rs  server.rs
dwd/src/engine/: coro.rs  http.rs  runtime.rs  udp.rs
dwd/src/engine/http/: cfg.rs  engine.rs  engine_raw.rs  payload.rs  stat.rs
dwd/src/engine/http/payload/: jsonline.rs
dwd/src/engine/udp/: cfg.rs  engine.rs
dwd/src/grpc/: client.rs  mod.rs
dwd/src/stat/: percpu.rs
dwd/src/ui/: metric.rs
dwd/src/ui/metric/: gauge.rs  meter.rs  quantile.rs  throughput.rs
dwd/src/ui/widget/: input.rs
dwd/src/worker/: dpdk.rs  udp.rs
src/: cfg.rs  cmd.rs  generator.rs  lib.rs  main.rs  runtime.rs  shaper.rs  stat.rs  ui.rs
src/ui/: metric.rs  widget.rs
src/ui/metric/: gauge.rs  meter.rs  throughput.rs
src/ui/widget/: input.rs  keymap.rs  status.rs
src/worker/: udp.rs
