[package]
name = "dwd-dpdk"
version = "0.1.0"
edition = "2021"
publish = true
description = "DPDK for DWD"
license-file = "../LICENSE"
repository = "https://github.com/yanet-platform/dwd"

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }

[build-dependencies]
bindgen = "0.71"
cc = "1"