[package]
name = "dwd"
version = "0.5.1"
edition = "2021"
rust-version = "1.87"
publish = true
readme = "../README.md"
description = "High performance traffic generator"
authors = ["Evgeny Safronov <division494@gmail.com>"]
license-file = "../LICENSE"
keywords = ["network", "traffic-generator"]
repository = "https://github.com/yanet-platform/dwd"

[dependencies]
log = "0.4"
simple_logger = { version = "5", features = ["timestamps"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
tokio = { version = "1", features = [
    "rt",
    "net",
    "time",
    "macros",
    "sync",
    "io-util",
] }
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29.0"
crossterm = "0.28.1"

dpdk = { version = "0.1", path = "../dpdk", package = "dwd-dpdk", optional = true }
thiserror = { version = "2", optional = true }
pcap-parser = { version = "0.16", optional = true }
etherparse = { version = "0.16", optional = true }

http = "1.2"
bytes = "1.2"
hyper = { version = "1.6", features = ["http1", "client"] }
httparse = "1"
pin-project-lite = "0.2"
http-body-util = "0.1"
anyhow = "1"
pnet = "0.35"
libc = "0.2"
jemallocator = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
netlink-packet-core = { version = "0.7" }
netlink-packet-route = { version = "0.20" }
netlink-packet-sock-diag = "0.4.2"
netlink-proto = "0.11.3"
netlink-sys = { version = "0.8" }

[features]
dpdk = ["dep:dpdk", "dep:thiserror", "dep:pcap-parser", "dep:etherparse"]

[package.metadata.deb]
depends = "ibverbs-providers (>= 16), libc6 (>= 2.27), libibverbs1 (>= 1.1.6), libnuma1 (>= 2.0.11)"
features = ["dpdk"]
