[package]
name = "dwd"
version = "0.6.2"
edition = "2021"
rust-version = "1.96"
publish = true
readme = "../README.md"
description = "High performance traffic generator"
authors = ["Evgeny Safronov <division494@gmail.com>"]
license-file = "../LICENSE"
keywords = ["network", "traffic-generator"]
repository = "https://github.com/yanet-platform/dwd"

[dependencies]
# Core engine + the server half of the gRPC seam.
dwd-core = { path = "../dwd-core" }
# Generated gRPC API: the CLI/TUI talks to the core only through this.
dwd-proto = { path = "../dwd-proto" }

log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = [
    "rt",
    "net",
    "time",
    "macros",
    "sync",
    "io-util",
] }
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29.0"
crossterm = "0.28.1"

# Config/CLI types that name engine payloads + bind-address discovery.
http = "1.2"
bytes = "1.2"
http-body-util = "0.1"
pnet = "0.35"
anyhow = "1"
jemallocator = "0.5"

# gRPC client transport for the in-process seam.
tonic = "0.14"
tokio-stream = "0.1"
hyper-util = "0.1"
tower = { version = "0.5", features = ["util"] }
arc-swap = "1"

[features]
dpdk = ["dwd-core/dpdk"]

[package.metadata.deb]
maintainer = "Evgeny Safronov <division494@gmail.com>"
section = "net"
priority = "optional"
assets = [
    ["target/release/dwd", "usr/bin/", "755"],
    ["etc/dwd/*", "etc/dwd/", "644"],
]
depends = "libnuma1, libibverbs1, libmlx5-1"
